# algmatch

./: .gitignore  Benchmarks.md  LICENSE  README.md  SPAP_Usage.ipynb  build_and_test.bat  examples.ipynb  instance.txt  pyproject.toml
.github/workflows/: python-publish.yml
algmatch-FixesSMHR/src/algmatch/: stableMarriageProblem.py
algmatch-HRT/src/algmatch/: stableMarriageProblem.py
src/algmatch/: __init__.py  hospitalResidentsProblem.py  stableMarriageProblem.py  stableMarriageProblemWithTies.py  stableRoommatesProblem.py  studentProjectAllocation.py  studentProjectAllocationProjects.py  studentProjectAllocationWithTies.py  test_site.py
src/algmatch/DATA_FORMAT_GUIDELINES/: Hospital Residents Problem.md
src/algmatch/abstractClasses/: abstractDictionaryReader.py  abstractPreferenceInstance.py  abstractPreferenceInstanceWithTies.py  abstractReader.py
tests/: TUM.py  benchmarks.py  verification.py
tests/HRTests/: enumerateSMs.py  hrMultiVerifier.py  hrSingleVerifier.py  hrVerifier.py  hrVerifyCorrectness.py  instanceGenerator.py  minmaxSMs.py
tests/SMTests/: enumerateSMs.py  instanceGenerator.py  minmaxSMs.py  smAbstractVerifier.py  smMultiVerifier.py  smNewMulti  smSingleVerifier.py  smVerifier.py  smVerifyCorrectness.py
tests/SPATests/: enumerateSMs.py  instanceGenerator.py  spaVerifyCorrectness.py  spasMultiVerifier.py  spasSingleVerifier.py  spasVerifier.py
tests/SRTests/: srMultiVerifier.py  srSingleVerifier.py  srVerifier.py
tests/abstractTestClasses/: GeneratorInterface.py  abstractTieGenerator.py  abstractVerifier.py
tests/abstractTests/: abstractMultiVerifier.py  abstractSingleVerifier.py  abstractVerifier.py
(+162 files in other folders)
