[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smas"
version = "0.0.1"
authors = [
  { name="Varad Kulkarni", email="varadkulk123@gmail.com" },
  { name="Sofiat Olaosebikan", email="sofiat.olaosebikan@glasgow.ac.uk"}
]
description = "A package containing various stable matching algorithms, such as stable marriage, hospital-residents, and student-project allocation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/VaradK62442/smas"
Issues = "https://github.com/VaradK62442/smas/issues"